# fast_converter_microservices

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
services/auth/: .gitignore  pyproject.toml
services/auth/src/: __main__.py  server.py
services/auth/src/config/: database_url.py  settings.py
services/auth/src/dependencies/: __init__.py
services/auth/src/models/: __init__.py
services/auth/src/utils/: auth.py
services/gateway/: pyproject.toml
services/gateway/src/: __main__.py
services/gateway/src/api/: __init__.py
services/gateway/src/api/auth/: route.py
services/gateway/src/api/status/: route.py
services/gateway/src/api/upload/: route.py
services/gateway/src/core/: config.py  minio_client.py  setup.py
services/gateway/src/core/files_database/: __init__.py  session.py  url.py
services/gateway/src/dependencies/: __init__.py  auth.py  database.py
services/gateway/src/services/auth/: __init__.py
services/shared/: pyproject.toml
services/shared/src/shared/: minio_client.py  schema.py
services/shared/src/shared/constants/: __init__.py
services/shared/src/shared/database/: __init__.py  base.py  mixin.py  session.py
services/shared/src/shared/file_database/: entities.py  models.py
services/shared/src/shared/rabbitmq/: __init__.py  base.py  client.py  producer.py  receiver.py  types.py
services/video_to_mp3/: pyproject.toml
services/video_to_mp3/src/: __main__.py  config.py
